# Tether_Grace

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json
.claude/: settings.json
.github/agents/: drake-cpp-implementation-engineer.agent.md  fault-experiment-builder.agent.md  fault-tolerant-control-designer.agent.md  problem-definition-decomposer.agent.md  research-synthesis-analyst.agent.md  safety-validation-reviewer.agent.md  tether-lift-codebase-archaeologist.agent.md  tether-lift-integration-planner.agent.md  tether-lift-orchestrator.agent.md
.github/instructions/: root-repo-ownership.instructions.md
.github/prompts/: cl-vs-l1-experiment-review.prompt.md
IEEE_T-CST/: Main.tex  README.md  manuscript_revision_checklist.md
IEEE_T-CST/Figures/: capture_meshcat_snapshots.js  control_signal_flow.tex  evidence_pipeline.tex  generate_graphical_abstract.py  gradual_degradation_plot.tex  history_bias_plot.tex  noncl_delta_plot.tex  paper_scope_overview.tex  reduced_vs_drake_rmse_plot.tex  render_scenario_snapshots.py  scaling_trend_plot.tex  scenario_five_drones.tex  scenario_seven_drones.tex  scenario_three_drones.tex  software_architecture.tex  unknowns_status_summary.tex
IEEE_T-CST/References/: References.bib
IEEE_T-CST/Sections/: Section_III_Problem_Statement.tex  Section_II_Related_Works.tex  Section_IV_Fault-Tolerant_Control_Architecture.tex  Section_I_Introduction.tex  Section_VII_Discussion.tex  Section_VI_Simulation_Results.tex  Section_V_Experimental_Methodology.tex  Supplementary_Material.tex
IEEE_T-CST_camera_ready/: Main.tex
IEEE_T-CST_camera_ready/References/: References.bib
IEEE_T-CST_camera_ready/Sections/: Section_III_Proposed_Method.tex  Section_II_Problem_Statement.tex  Section_IV_Stability_Analysis.tex  Section_I_Introduction.tex  Section_VIII_Conclusion.tex  Section_VII_Discussion.tex  Section_VI_Simulation_Campaign_and_Results.tex  Section_V_Parameter_Adaptation_Tension_Constraints_and_Post-Fault_Formation_Reshape.tex  suggested.tex
IEEE_T-CST_ext/References/: References.bib
IEEE_T-CST_ext/Sections/: Section_III_Proposed_Method.tex  Section_II_Problem_Statement.tex  Section_IV_Stability_Analysis.tex  Section_I_Introduction.tex  Section_VIII_Conclusion.tex  Section_VII_Discussion.tex  Section_VI_Simulation_Campaign_and_Results.tex  Section_V_Parameter_Adaptation_Tension_Constraints_and_Post-Fault_Formation_Reshape.tex
Research/: .gitignore  DECENTRALIZED_FAULT_AWARE_README.md  README.md  add_sim_overlays.py  make_presentation.py  make_presentation_v2.py  run_5drone_campaign.sh  run_ieee_campaign.sh
Research/analysis/: PUBLICATION_FIGURES.md  README.md  actuator_margin_audit.py  build_tables.py  fault_index_sweep_analysis.py  fault_time_sweep_analysis.py  feasibility_envelope.py  gamma_eta_fit.py  gen_tcst_figures.py  ieee_style.py  jump_magnitude_audit.py  l1_gain_map.py  n_cross_validation_analysis.py  paired_delta_audit.py  phase_t_domain_audit.py  phase_t_domain_audit_v11.py  pickup_phase_audit.py  plot_3d_trajectory_V4.py  plot_ablation.py  plot_ablation_ci.py  plot_capability_demo.py  plot_comparison.py  plot_ieee_figures.py  plot_p2a_ff_ablation.py  plot_p2b_mass_mismatch.py  plot_p2c_mpc_ceiling.py  plot_p2d_period_sweep.py  plot_p2e_wind_seed.py  plot_publication.py  plot_review_augmentation.py  plot_scenario.py  plot_system.py  recovery_iae_audit.py  reduction_fidelity_audit.py  self_announcement_figure.py  statistics.py  update_p2a_report.py  update_p2b_report.py  update_p2c_report.py  (+2 more)
Research/cpp/: CMakeLists.txt  README.md
Research/cpp/.cache/clangd/index/: cable_fault_gate.h.5420A2F26B179C9A.idx  cable_fault_visualizer.h.D7F736EAF7FE8742.idx  control_mode_switcher.h.2C8A00BC1D66FD9D.idx  decentralized_fault_aware_controller.cc.F202443B954DBF21.idx  decentralized_fault_aware_controller.h.A19A378A276B0C4E.idx  decentralized_fault_aware_sim_main.cc.614E569B5641B357.idx  decentralized_local_controller.cc.C948F7A02635A902.idx  decentralized_local_controller.h.68645C345466BE4B.idx  decentralized_mpc_four_drones_test_main.cc.405F4D378EEBBB48.idx  decentralized_mpc_phase25_test_main.cc.1DFF21AFE0DB71B2.idx  decentralized_mpc_test_main.cc.10E2D037DED2AFDD.idx  decentralized_mpc_two_drones.h.C0C2AD471AD71D90.idx  decentralized_mpc_two_drones_support.cc.8BBB95688008DA56.idx  decentralized_mpc_two_drones_test_main.cc.FC1CDFB93A92B86C.idx  decentralized_optimal_controller.cc.8FCC599643D1C151.idx  decentralized_optimal_controller.h.653AD558C9A9DA2D.idx  dual_plant_state_splitter.cc.C0396DA9323DDF2B.idx  dual_plant_state_splitter.h.2A40CEEF51E15459.idx  fault_aware_rope_visualizer.cc.737D8F212CF5D5E1.idx  fault_aware_rope_visualizer.h.11C705C01451ECD3.idx  fault_injection_main.cc.758CCB2D3513FACC.idx  force_combiner.cc.21EA784707F3B0CD.idx  force_combiner.h.9CA0409F857F50C8.idx  gpac_fault_sim_main.cc.A4AE0EC641F2766F.idx  plant_state_splitter.cc.F3CEC26163B24F5A.idx  plant_state_splitter.h.A54CFCB5AC7A183E.idx  quad_plant_state_splitter.cc.0F52F76F9FB9DD1E.idx  quad_plant_state_splitter.h.BACACB1C3155DCA1.idx  safe_hover_controller.h.E4E5B2E2BB0E0144.idx  tension_communicator.cc.3C232FD452F2F0B6.idx  tension_communicator.h.98BBE2A9A396D5D6.idx
Research/cpp/include/: cable_fault_gate.h  cl_param_estimator.h  comm_channel_model.h  control_mode_switcher.h  controller_utils.h  decentralized_local_controller.h  dryden_wind_model.h  fault_aware_rope_visualizer.h  fault_detector.h  formation_coordinator.h  imu_noise_injector.h  meshcat_fault_hider.h  mpc_local_controller.h  rope_segment_tension_probe.h  run_manifest.h  safe_hover_controller.h
Research/cpp/src/: cl_param_estimator.cc  decentralized_fault_aware_sim_main.cc  decentralized_local_controller.cc  fault_aware_rope_visualizer.cc  mpc_local_controller.cc
archive/: README.md
experiments/: README.md
outputs/: README.md  hinf_scalar_results.json
tests/: cable_snap_profile_test.cc  desired_geometry_redistributor_test.cc  fault_metrics_test.cc  gpac_seam_adapter_test.cc  l1_adaptive_core_test.cc  reference_trajectory_mapper_test.cc
(+337 files in other folders)
